--- a/src/lang/en_US.json
+++ b/src/lang/en_US.json
@@ -4,22 +4,58 @@
     "gift": "Promotions",
     "kf": "Support",
     "mine": "My Account",
-    "collectionSuccess": "Collection successful",
+    "collectionSuccess": "Added to favorites",
     "noLogin": "Not logged in",
-    "loginCheck": "Log in to view"
+    "loginCheck": "Login to view",
+    "downloadApp": "Download Mobile App",
+    "hotline": "Hotline"
   },
   "user": {
     "register": "Register",
     "settings": "Settings",
     "conactUs": "Contact Us"
   },
-  "noData": "No data",
+  "game": {
+    "myCollection": "My Favorites",
+    "start": "Start",
+    "venues": "Venues"
+  },
+  "common": {
+    "viewMore": "View More",
+    "viewDetails": "View Details"
+  },
+  "footer": {
+    "brandInfo1": "ATB China by MI Platform (Taiwan)",
+    "brandInfo2": "Technical support provided by professional team",
+    "mga": "Malta License (MGA) Certified",
+    "bvi": "British Virgin Islands (BVI) Certified",
+    "gc": "UK GC Supervisory Committee",
+    "pagcor": "Philippines (PAGCOR) Supervisory License",
+    "consultNow": "Consult Now",
+    "disclaimer": "ATB China holds legal licenses issued by European Malta MGA, UK GC Supervisory Committee (GamblingCommission) and Philippine Government (PAGCOR). Registered in the British Virgin Islands, it is a legal company recognized by international industry associations. Please ensure you are 18 years or older before registering and playing!",
+    "copyright": "Copyright ©2019-2023 ATB China All Rights Reserved"
+  },
+  "home": {
+    "newMemberOffer": "New Member Offer",
+    "moreOffersInVip": "More Offers in VIP",
+    "electronicOffer": "Electronic Games Exclusive Offer",
+    "electronicOfferDesc": "25% deposit bonus for electronic games",
+    "liveOffer": "Live Casino Exclusive Offer",
+    "liveOfferDesc": "30% bonus on first deposit",
+    "safeBetting": "Safe and Fast Real-time Betting",
+    "enjoyExperience": "Enjoy the Ultimate Experience",
+    "appDescription": "The world's first integrated entertainment native app with smooth and perfect operation. Massive sports, fishing games, live casino, lottery betting and electronic games. The latest and most complete entertainment projects are at your fingertips. Scan QR code to download now!",
+    "scanTip": "(Tip: Use your phone's browser or camera to scan the QR code to download)",
+    "browserAccess": "Mobile browser can also access directly",
+    "comprehensiveChoice": "Comprehensive and Convenient Choice"
+  },
+  "noData": "No Data",
   "all": "All",
-  "activity_detail": "Event Details",
+  "activity_detail": "Activity Details",
   "mine": {
     "safeSetting": "Security Settings",
     "aboutUs": "About Us",
-    "logout": "Log Out",
+    "logout": "Logout",
     "loginPwd": "Login Password",
     "withdrawPwd": "Withdrawal Password",
     "deposit": "Deposit",
@@ -39,78 +75,78 @@
     "inputNewPwd": "Please enter new password",
     "confrmNewPwd": "Confirm New Password",
     "newPwdDiff": "New passwords do not match",
-    "successAndLoginAgain": "Modified successfully, please log in again",
+    "successAndLoginAgain": "Modified successfully, please login again",
     "qknewPwd": "Withdrawal Password",
     "inputPlz": "Please enter",
     "inputPlzAgain": "Please enter again",
-    "inputTisDiff": "Entries do not match",
+    "inputTisDiff": "The two inputs do not match",
     "confrmqkPwd": "Confirm Withdrawal Password",
     "name": "Username",
     "canDrawMoney": "Available for Withdrawal",
-    "shouChannel": "Payment Address",
+    "shouChannel": "Receiving Address",
     "cardName": "Cardholder Name",
     "cardAccount": "Bank Account",
     "drawMoney": "Withdrawal Amount",
     "drawingPwd": "Withdrawal Password",
     "allMoney": "All",
-    "notSetDrawingPwd": "You have not set a withdrawal password. Please set a withdrawal password before proceeding.",
-    "bindDrawingAddress": "Please bind your bank card first",
-    "vipDetial": "Promotion Rules",
-    "vipLiJin": "Promotion Bonus",
+    "notSetDrawingPwd": "You haven't set withdrawal password yet, please set it first",
+    "bindDrawingAddress": "Please bind bank card first",
+    "vipDetial": "Upgrade Rules",
+    "vipLiJin": "Upgrade Bonus",
     "bet": "Bet",
-    "allDaBiao": "All Standards Met",
-    "moneyLog": "Transaction Records",
+    "allDaBiao": "All Targets Met",
+    "moneyLog": "Transaction History",
     "operateType": "Change Type",
     "walletType": "Amount Type",
     "today": "Today",
     "yestoday": "Yesterday",
-    "week": "Within a Week",
-    "month": "Within a Month",
+    "week": "Within 1 Week",
+    "month": "Within 1 Month",
     "all": "All",
     "money_rebate": "Rebate Wallet",
     "money_fanyong": "Commission Wallet",
     "money": "Main Wallet",
-    "moneyLogAmount": "Turnover Amount",
+    "moneyLogAmount": "Flow Amount",
     "validAmount": "Valid Amount",
-    "gameLog": "Game Records",
+    "gameLog": "Game History",
     "totalBetAmount": "Total Bet Amount",
     "totalWinLoss": "Total Win/Loss",
     "apiType": "Interface Type",
     "gameType": "Game Type",
-    "tuiguanG": "Promote & Earn",
+    "tuiguanG": "Earn from Referrals",
     "baseInfo": "Basic Information",
-    "transferAmount": "Credit Transfer",
+    "transferAmount": "Transfer Credits",
     "totalBalance": "Account Balance",
     "inputTransferMoney": "Please enter transfer amount",
     "money2": "Amount",
-    "myCollection": "My Collection",
+    "myCollection": "My Favorites",
     "myNotices": "My Messages",
     "balance": "Balance",
     "centerWalletBalance": "Main Wallet Balance",
     "toGame": "Enter Game",
     "loveIsHere": "Everything you love is here",
     "mxdaikuan": "Interest-free Loan",
-    "yuEBao": "Yu'E Bao",
+    "yuEBao": "Balance Treasure",
     "bankCard": "Bank Card",
     "accountSafe": "Account & Security",
-    "safest": "Complete account info for better security",
+    "safest": "Complete account information for better security",
     "persionalInfo": "Personal Information",
     "normalFunc": "Common Functions",
     "centerWallet": "Main Wallet",
     "fsWallet": "Rebate Wallet",
     "welcomeTo": "Welcome to",
     "levelRight": "Level Privileges",
-    "pullMoney": "Promote & Earn",
+    "pullMoney": "Earn from Referrals",
     "loginRegister": "Login/Register",
     "passwordTooShort": "Password must be at least 6 characters"
   },
   "loading": "Loading...",
   "submit": "Submit",
   "inputNewPwdAgain": "Please enter new password again",
-  "success": "Operation successful",
+  "success": "Operation Successful",
   "noMore": "No more",
   "moneyLog": {
-    "detail": "Record Details",
+    "detail": "Transaction Details",
     "tradeMoney": "Transaction Amount",
     "beforeMoney": "Balance Before Transfer",
     "afterMoney": "Balance After Transfer",
@@ -121,7 +157,7 @@
     "status": "Game Status"
   },
   "fillIn": "Fill In",
-  "changeAuto": "Switch to Automatic",
+  "changeAuto": "Switch to Auto",
   "changeManual": "Switch to Manual",
   "confirm": "Confirm",
   "dianzi": "Electronic Games",
@@ -130,63 +166,60 @@
   "lottery": "Lottery Games",
   "qipai": "Card Games",
   "fishGame": "Fishing Games",
-  "noRecord": "No data available",
+  "noRecord": "No Records",
   "unread": "Unread",
   "readed": "Read",
   "transferIn": "Transfer In",
   "inputTransferInAmount": "Please enter transfer amount",
-  "todayDoNotShow": "Don't show again today",
+  "todayDoNotShow": "Don't show today",
   "enterGame": "Enter Game",
   "transferInMoneyMustThan0": "Transfer amount must be greater than 0",
   "refreshBalanceFailed": "Failed to refresh balance",
-  "depositFailed": "Failed to convert credit",
-  "moneyTransferMoneyNot": "Wallets cannot transfer to each other",
+  "depositFailed": "Failed to convert credits",
+  "moneyTransferMoneyNot": "Cannot transfer between wallets",
   "daliySign": "Daily Check-in",
   "support": {
     "welcome": "Welcome to Customer Service Center",
     "mainCustom": "Main Customer Service",
     "agentCoustom": "Customer Service Representative",
-    "serviceTop": "24/7 Dedicated Service",
-    "onlineService": "Online Support",
-    "vipService": "VIP Support",
+    "serviceTop": "24-hour Dedicated Service",
+    "onlineService": "Online Service",
+    "vipService": "VIP Service",
     "agentCooperation": "Agent Cooperation",
     "complaints": "Complaints & Suggestions",
     "telegram": "Telegram",
     "whatsapp": "WhatsApp",
-    "noServiceConfig": "No service configuration available",
+    "noServiceConfig": "No service configuration",
     "linkNotConfigured": "{{name}} link not configured",
     "openLinkFailed": "Failed to open {{name}}",
     "configLoadFailed": "Failed to load configuration, please try again"
   },
-  "selected": "Please select",
-  "game": {
-    "myCollection": "My Collection"
-  },
+  "selected": "Please Select",
   "login": {
     "openFixed": "Start Ultimate Experience",
     "inputAccount": "Please enter account",
     "inputRight": "Please enter correct content",
     "inputPwd": "Please enter password",
     "login": "Login",
-    "forgetPwd": "Forgot password?",
+    "forgetPwd": "Forgot Password?",
     "register": "Register",
     "resetpwdForCustomer": "Please contact customer service to reset password",
-    "loginSuccess": "Login successful"
+    "loginSuccess": "Login Successful"
   },
-  "rememberMe": "Remember password",
-  "weiHuZhong": "Platform maintenance...",
+  "rememberMe": "Remember Password",
+  "weiHuZhong": "Platform game under maintenance...",
   "pay_type": "Payment Method",
   "online_pay": "Online Payment",
   "company_pay": "Company Deposit",
   "pay_channel": "Payment Channel",
-  "recharge_qrcode": "Payment QR Code",
-  "recharge_account": "Payment Account",
+  "recharge_qrcode": "Collection QR Code",
+  "recharge_account": "Collection Account",
   "copy": "Copy",
-  "recharge_username": "Payment Name",
+  "recharge_username": "Recipient Name",
   "upload_cert": "Upload Transfer Certificate",
   "transfer_account": "Transfer Account",
   "transfer_user": "Transferor",
-  "iput_transfer_amount": "Please enter transferor's name",
+  "iput_transfer_amount": "Please enter transferor name",
   "transfer_amount": "Recharge Amount",
   "input_transfer_amount": "Please enter recharge amount",
   "account": "Account",
@@ -195,10 +228,10 @@
   "rechate_address": "Recharge Address",
   "transfer_address": "Recharge Address",
   "input_transfer_addr": "Please enter recharge address",
-  "transfer_out_address": "Transfer Address",
-  "input_transfer_out_addr": "Please enter transfer wallet address",
+  "transfer_out_address": "Transfer Out Address",
+  "input_transfer_out_addr": "Please enter transfer out wallet address",
   "game_log": {
-    "not_cpmpelete": "Not Settled",
+    "not_cpmpelete": "Unsettled",
     "cancel": "Cancelled",
     "complete": "Completed"
   },
@@ -226,53 +259,53 @@
   "vip": {
     "dqCK": "Current Deposit",
     "dqBet": "Current Bet",
-    "amount": "Promotion Gift",
+    "amount": "Upgrade Bonus",
     "zhuanXiang": "Exclusive",
-    "dayLJ": "Daily Gift",
-    "weekLJ": "Weekly Gift",
-    "monthLJ": "Monthly Gift",
-    "brithdayLJ": "Birthday Gift",
-    "rightDetail": "VIP Privilege Details"
+    "dayLJ": "Daily Bonus",
+    "weekLJ": "Weekly Bonus",
+    "monthLJ": "Monthly Bonus",
+    "brithdayLJ": "Birthday Bonus",
+    "rightDetail": "VIP Privileges Details"
   },
   "add": "Add",
-  "sweetWarning": "Warm Tips",
+  "sweetWarning": "Warning",
   "deposit": {
-    "detail1": "1. The banks listed above are supported by \"Online Payment\". Choose your payment bank.",
-    "detail2": "2. Fill in the amount you want to pay in the \"Deposit Amount\" field and click the \"Submit\" button.",
-    "detail3": "3. After successful deposit, you must reach 1x valid bet amount before withdrawal (Anti-money laundering)."
+    "detail1": "1. The banks listed above support 'Online Payment'. Please select your payment bank.",
+    "detail2": "2. Enter the amount you want to pay in the 'Deposit Amount' field and click 'Submit' button.",
+    "detail3": "3. After successful deposit, you need to reach 1x effective betting amount before withdrawal (anti-money laundering)."
   },
-  "youhuihuodong": "Promotions",
+  "youhuihuodong": "Promotional Activities",
   "systemAnnouncement": "System Announcement",
-  "customerService": "Customer Service",
+  "customerService": "Customer Service Address",
   "financeAddress": "Finance Address",
   "clickToOpen": "Click to Open",
   "hotline": "Hotline",
-  "rechargeRecord": "Recharge Records",
+  "rechargeRecord": "Recharge History",
   "rechargeAmount": "Recharge Amount",
   "transferBankName": "Transfer Bank Name",
   "inputTransferBankName": "Please enter transfer bank name",
   "inputBankCardNumber": "Please enter bank card number",
   "inputHuiwangAccount": "Please enter Huiwang account",
   "inputUSDTAddress": "Please enter USDT wallet address",
-  "rechargeSubmitSuccess": "Recharge application submitted successfully",
-  "warmTips": "Warm Tips",
-  "rebateRecord": "Rebate Records",
-  "commissionRecord": "Commission Records",
+  "rechargeSubmitSuccess": "Recharge request submitted successfully",
+  "warmTips": "Tips",
+  "rebateRecord": "Rebate History",
+  "commissionRecord": "Commission History",
   "subordinateMembers": "Subordinate Members",
   "teamInfo": "Team Information",
-  "agentRecord": "Agent Records",
+  "agentRecord": "Agent History",
   "adjustProportion": "Adjust Proportion",
   "addCredits": "Add Credits",
   "memberAddCredits": "Member Add Credits",
   "confirmTransfer": "Confirm Transfer",
   "transferAmountTip1": "Transfer amount will be deducted from your balance",
-  "transferAmountTip2": "Transfer will be credited immediately and cannot be reversed",
+  "transferAmountTip2": "Transfer will arrive immediately and cannot be revoked",
   "transferAmountTip3": "Please carefully verify member information and amount",
-  "setAsDefault": "Set as Default",
-  "confirmSetDefault": "Confirm to set this account as default?",
-  "alreadyDefault": "This account is already default",
-  "settingSuccess": "Setting successful",
-  "settingFailed": "Setting failed",
+  "setAsDefault": "Set as Default Account",
+  "confirmSetDefault": "Are you sure to set this account as default?",
+  "alreadyDefault": "This account is already the default",
+  "settingSuccess": "Setting Successful",
+  "settingFailed": "Setting Failed",
   "nickname": "Nickname",
   "inputNickname": "Please enter nickname",
   "hotGames": "Hot Games",
@@ -288,19 +321,19 @@
   "cancel": "Cancel",
   "refresh": "Refresh",
   "search": "Search",
-  "operationFailed": "Operation failed",
-  "pleaseInput": "Please enter",
-  "pleaseSelect": "Please select",
+  "operationFailed": "Operation Failed",
+  "pleaseInput": "Please Enter",
+  "pleaseSelect": "Please Select",
   "inputPlaceholder": "Please enter content",
-  "pending": "Pending",
+  "pending": "Pending Review",
   "approved": "Approved",
   "rejected": "Rejected",
   "processing": "Processing",
   "completed": "Completed",
-  "networkError": "Network request failed",
+  "networkError": "Network Request Failed",
   "tryAgainLater": "Please try again later",
-  "dataLoadFailed": "Data loading failed",
-  "parameterError": "Parameter error",
+  "dataLoadFailed": "Failed to load data",
+  "parameterError": "Parameter Error",
   "confirmLogout": "Confirm logout?",
   "applyTime": "Application Time",
   "completeTime": "Completion Time",
