--- a/src/lang/ko-KR.json
+++ b/src/lang/ko-KR.json
@@ -6,12 +6,48 @@
     "mine": "마이페이지",
     "collectionSuccess": "즐겨찾기 성공",
     "noLogin": "로그인되지 않음",
-    "loginCheck": "로그인 후 확인"
+    "loginCheck": "로그인 후 확인",
+    "downloadApp": "모바일 앱 다운로드",
+    "hotline": "핫라인"
   },
   "user": {
     "register": "회원가입",
     "settings": "설정",
     "conactUs": "문의하기"
+  },
+  "game": {
+    "myCollection": "내 즐겨찾기",
+    "start": "시작",
+    "venues": "게임장"
+  },
+  "common": {
+    "viewMore": "더보기",
+    "viewDetails": "상세보기"
+  },
+  "footer": {
+    "brandInfo1": "ATB 중국은 MI 플랫폼(대만)에서",
+    "brandInfo2": "기술 지원을 제공합니다",
+    "mga": "몰타 라이선스(MGA) 인증",
+    "bvi": "영국령 버진아일랜드(BVI) 인증",
+    "gc": "영국 GC 감독위원회",
+    "pagcor": "필리핀(PAGCOR) 감독 라이선스",
+    "consultNow": "즉시 상담",
+    "disclaimer": "ATB 중국은 유럽 몰타 MGA, 영국 GC 감독위원회(GamblingCommission) 및 필리핀 정부(PAGCOR)에서 발급한 합법적인 라이선스를 보유하고 있습니다. 영국령 버진아일랜드에 등록되어 있으며 국제 산업 협회에서 인정하는 합법적인 회사입니다. 등록 및 게임 이용 전 만 18세 이상인지 확인하시기 바랍니다!",
+    "copyright": "저작권 ©2019-2023 ATB 중국 모든 권리 보유"
+  },
+  "home": {
+    "newMemberOffer": "신규 회원 혜택",
+    "moreOffersInVip": "더 많은 혜택은 VIP에서",
+    "electronicOffer": "전자게임 전용 혜택",
+    "electronicOfferDesc": "전자게임 전용 입금 25% 보너스",
+    "liveOffer": "라이브 카지노 전용 혜택",
+    "liveOfferDesc": "첫 입금 시 30% 보너스",
+    "safeBetting": "안전하고 빠른 실시간 베팅",
+    "enjoyExperience": "손끝으로 즐기는 완벽한 경험",
+    "appDescription": "세계 최초 통합 엔터테인먼트 네이티브 앱으로 원활하고 완벽한 조작을 제공합니다. 다양한 스포츠, 낚시 게임, 라이브 카지노, 복권 및 전자 게임 등 최신 엔터테인먼트를 손안에서 경험하세요. QR 코드를 스캔하여 지금 다운로드하세요!",
+    "scanTip": "(팁: 휴대폰 브라우저 또는 카메라로 QR 코드를 스캔하여 다운로드)",
+    "browserAccess": "모바일 브라우저로도 직접 접속 가능",
+    "comprehensiveChoice": "포괄적이고 편리한 선택"
   },
   "noData": "데이터 없음",
   "all": "전체",
@@ -53,14 +89,14 @@
     "drawMoney": "출금 금액",
     "drawingPwd": "출금 비밀번호",
     "allMoney": "전체",
-    "notSetDrawingPwd": "출금 비밀번호를 설정하지 않았습니다. 먼저 설정 후 진행하세요",
+    "notSetDrawingPwd": "출금 비밀번호를 설정하지 않았습니다. 먼저 설정해주세요",
     "bindDrawingAddress": "먼저 은행 카드를 바인딩하세요",
     "vipDetial": "승급 규칙",
     "vipLiJin": "승급 보너스",
     "bet": "베팅",
-    "allDaBiao": "모든 기준 달성",
-    "moneyLog": "거래 기록",
-    "operateType": "변동 유형",
+    "allDaBiao": "모든 목표 달성",
+    "moneyLog": "거래 내역",
+    "operateType": "변경 유형",
     "walletType": "금액 유형",
     "today": "오늘",
     "yestoday": "어제",
@@ -69,46 +105,46 @@
     "all": "전체",
     "money_rebate": "리베이트 지갑",
     "money_fanyong": "커미션 지갑",
-    "money": "메인 지갑",
+    "money": "중앙 지갑",
     "moneyLogAmount": "거래 금액",
     "validAmount": "유효 금액",
     "gameLog": "게임 기록",
     "totalBetAmount": "총 베팅 금액",
-    "totalWinLoss": "총 승/패",
+    "totalWinLoss": "총 승패",
     "apiType": "인터페이스 유형",
     "gameType": "게임 유형",
-    "tuiguanG": "추천 수익",
+    "tuiguanG": "추천으로 수익",
     "baseInfo": "기본 정보",
-    "transferAmount": "한도 전환",
-    "totalBalance": "계좌 잔액",
+    "transferAmount": "금액 전환",
+    "totalBalance": "계정 잔액",
     "inputTransferMoney": "이체 금액을 입력하세요",
     "money2": "금액",
     "myCollection": "내 즐겨찾기",
     "myNotices": "내 메시지",
     "balance": "잔액",
-    "centerWalletBalance": "메인 지갑 잔액",
-    "toGame": "게임 입장",
-    "loveIsHere": "좋아하는 모든 것이 여기에",
+    "centerWalletBalance": "중앙 지갑 잔액",
+    "toGame": "게임 시작",
+    "loveIsHere": "좋아하는 것들이 모두 여기에",
     "mxdaikuan": "무이자 대출",
-    "yuEBao": "위어바오",
+    "yuEBao": "잔액보",
     "bankCard": "은행 카드",
     "accountSafe": "계정 및 보안",
-    "safest": "계정 정보 완성으로 더 안전하게",
+    "safest": "계정 정보를 완성하여 더 안전하게",
     "persionalInfo": "개인 정보",
-    "normalFunc": "자주 쓰는 기능",
-    "centerWallet": "메인 지갑",
+    "normalFunc": "자주 사용하는 기능",
+    "centerWallet": "중앙 지갑",
     "fsWallet": "리베이트 지갑",
     "welcomeTo": "환영합니다",
-    "levelRight": "등급 특권",
-    "pullMoney": "추천 수익",
+    "levelRight": "레벨 특권",
+    "pullMoney": "추천으로 수익",
     "loginRegister": "로그인/회원가입",
-    "passwordTooShort": "비밀번호는 최소 6자 이상이어야 합니다"
+    "passwordTooShort": "비밀번호는 6자 이상이어야 합니다"
   },
   "loading": "로딩 중...",
   "submit": "제출",
   "inputNewPwdAgain": "새 비밀번호를 다시 입력하세요",
   "success": "작업 성공",
-  "noMore": "더 이상 없음",
+  "noMore": "더 이상 없습니다",
   "moneyLog": {
     "detail": "기록 상세",
     "tradeMoney": "거래 금액",
@@ -120,7 +156,7 @@
     "tradeDate": "거래 시간",
     "status": "게임 상태"
   },
-  "fillIn": "입력",
+  "fillIn": "작성",
   "changeAuto": "자동으로 전환",
   "changeManual": "수동으로 전환",
   "confirm": "확인",
@@ -133,35 +169,32 @@
   "noRecord": "데이터 없음",
   "unread": "읽지 않음",
   "readed": "읽음",
-  "transferIn": "이체 입금",
-  "inputTransferInAmount": "이체 금액을 입력하세요",
-  "todayDoNotShow": "오늘 다시 표시 안 함",
-  "enterGame": "게임 입장",
-  "transferInMoneyMustThan0": "이체 금액은 0보다 커야 합니다",
+  "transferIn": "입금",
+  "inputTransferInAmount": "입금 금액을 입력하세요",
+  "todayDoNotShow": "오늘 다시 표시하지 않음",
+  "enterGame": "게임 시작",
+  "transferInMoneyMustThan0": "입금 금액은 0보다 커야 합니다",
   "refreshBalanceFailed": "잔액 새로고침 실패",
-  "depositFailed": "한도 전환 실패",
+  "depositFailed": "금액 전환 실패",
   "moneyTransferMoneyNot": "지갑 간 상호 전환 불가",
-  "daliySign": "매일 출석",
+  "daliySign": "일일 출석",
   "support": {
     "welcome": "고객센터에 오신 것을 환영합니다",
-    "mainCustom": "메인 고객센터",
+    "mainCustom": "메인 고객 서비스",
     "agentCoustom": "고객 서비스 담당자",
     "serviceTop": "24시간 전담 서비스",
-    "onlineService": "온라인 지원",
-    "vipService": "VIP 지원",
+    "onlineService": "온라인 고객 서비스",
+    "vipService": "VIP 고객 서비스",
     "agentCooperation": "에이전트 협력",
     "complaints": "불만 및 제안",
     "telegram": "텔레그램",
     "whatsapp": "왓츠앱",
-    "noServiceConfig": "서비스 구성이 없습니다",
-    "linkNotConfigured": "{{name}} 링크가 구성되지 않았습니다",
+    "noServiceConfig": "서비스 구성 없음",
+    "linkNotConfigured": "{{name}} 링크가 구성되지 않음",
     "openLinkFailed": "{{name}} 열기 실패",
-    "configLoadFailed": "구성 로드 실패, 다시 시도해 주세요"
+    "configLoadFailed": "구성 로드 실패, 다시 시도하세요"
   },
   "selected": "선택하세요",
-  "game": {
-    "myCollection": "내 즐겨찾기"
-  },
   "login": {
     "openFixed": "최고의 경험 시작",
     "inputAccount": "계정을 입력하세요",
@@ -170,33 +203,33 @@
     "login": "로그인",
     "forgetPwd": "비밀번호를 잊으셨나요?",
     "register": "회원가입",
-    "resetpwdForCustomer": "고객센터에 문의하여 비밀번호를 재설정하세요",
+    "resetpwdForCustomer": "고객 서비스에 문의하여 비밀번호를 재설정하세요",
     "loginSuccess": "로그인 성공"
   },
   "rememberMe": "비밀번호 기억",
-  "weiHuZhong": "플랫폼 점검 중...",
-  "pay_type": "결제 방식",
+  "weiHuZhong": "플랫폼 게임 유지보수 중...",
+  "pay_type": "결제 방법",
   "online_pay": "온라인 결제",
   "company_pay": "회사 입금",
   "pay_channel": "결제 채널",
-  "recharge_qrcode": "결제 QR 코드",
-  "recharge_account": "결제 계좌",
+  "recharge_qrcode": "수금 QR 코드",
+  "recharge_account": "수금 계좌",
   "copy": "복사",
-  "recharge_username": "수취인 이름",
+  "recharge_username": "수금자 이름",
   "upload_cert": "이체 증명서 업로드",
   "transfer_account": "이체 계좌",
-  "transfer_user": "송금인",
-  "iput_transfer_amount": "송금인 이름을 입력하세요",
+  "transfer_user": "이체자",
+  "iput_transfer_amount": "이체자 이름을 입력하세요",
   "transfer_amount": "충전 금액",
   "input_transfer_amount": "충전 금액을 입력하세요",
-  "account": "계좌",
+  "account": "계정",
   "open_bank": "개설 은행",
   "input_recharge_amount": "이체 계좌를 입력하세요",
   "rechate_address": "충전 주소",
   "transfer_address": "충전 주소",
   "input_transfer_addr": "충전 주소를 입력하세요",
-  "transfer_out_address": "송금 주소",
-  "input_transfer_out_addr": "송금 지갑 주소를 입력하세요",
+  "transfer_out_address": "출금 주소",
+  "input_transfer_out_addr": "출금 지갑 주소를 입력하세요",
   "game_log": {
     "not_cpmpelete": "미정산",
     "cancel": "취소됨",
@@ -224,7 +257,7 @@
     "email": "이메일"
   },
   "vip": {
-    "dqCK": "현재 예금",
+    "dqCK": "현재 입금",
     "dqBet": "현재 베팅",
     "amount": "승급 보너스",
     "zhuanXiang": "전용",
@@ -235,15 +268,15 @@
     "rightDetail": "VIP 특권 상세"
   },
   "add": "추가",
-  "sweetWarning": "안내",
+  "sweetWarning": "알림",
   "deposit": {
-    "detail1": "1. 위 은행들은 \"온라인 결제\"를 지원하는 은행입니다. 결제 은행을 선택하세요.",
-    "detail2": "2. \"입금 금액\" 란에 결제할 금액을 입력하고 \"제출\" 버튼을 클릭하세요.",
-    "detail3": "3. 입금 성공 후 1배 유효 베팅액에 도달해야 출금 가능합니다(자금세탁 방지)."
+    "detail1": "1. 위에 나열된 은행은 '온라인 결제'를 지원하는 은행입니다. 결제 은행을 선택하세요.",
+    "detail2": "2. '입금 금액' 란에 결제할 금액을 입력하고 '제출' 버튼을 클릭하세요.",
+    "detail3": "3. 입금 성공 후 1배의 유효 베팅 금액에 도달해야 출금 가능합니다(자금 세탁 방지)."
   },
-  "youhuihuodong": "프로모션",
+  "youhuihuodong": "프로모션 이벤트",
   "systemAnnouncement": "시스템 공지",
-  "customerService": "고객 서비스",
+  "customerService": "고객 서비스 주소",
   "financeAddress": "재무 주소",
   "clickToOpen": "클릭하여 열기",
   "hotline": "핫라인",
@@ -252,10 +285,10 @@
   "transferBankName": "이체 은행명",
   "inputTransferBankName": "이체 은행명을 입력하세요",
   "inputBankCardNumber": "은행 카드 번호를 입력하세요",
-  "inputHuiwangAccount": "후이왕 계좌를 입력하세요",
+  "inputHuiwangAccount": "Huiwang 계좌를 입력하세요",
   "inputUSDTAddress": "USDT 지갑 주소를 입력하세요",
   "rechargeSubmitSuccess": "충전 신청이 성공적으로 제출되었습니다",
-  "warmTips": "안내",
+  "warmTips": "알림",
   "rebateRecord": "리베이트 기록",
   "commissionRecord": "커미션 기록",
   "subordinateMembers": "하위 회원",
@@ -265,18 +298,18 @@
   "addCredits": "크레딧 추가",
   "memberAddCredits": "회원 크레딧 추가",
   "confirmTransfer": "이체 확인",
-  "transferAmountTip1": "이체 금액은 잔액에서 차감됩니다",
-  "transferAmountTip2": "이체는 즉시 입금되며 취소할 수 없습니다",
+  "transferAmountTip1": "이체 금액이 잔액에서 차감됩니다",
+  "transferAmountTip2": "이체 후 즉시 도착하며 취소할 수 없습니다",
   "transferAmountTip3": "회원 정보와 금액을 신중히 확인하세요",
-  "setAsDefault": "기본값으로 설정",
-  "confirmSetDefault": "이 계정을 기본값으로 설정하시겠습니까?",
-  "alreadyDefault": "이 계정은 이미 기본값입니다",
+  "setAsDefault": "기본 계정으로 설정",
+  "confirmSetDefault": "이 계정을 기본 계정으로 설정하시겠습니까?",
+  "alreadyDefault": "이 계정은 이미 기본 계정입니다",
   "settingSuccess": "설정 성공",
   "settingFailed": "설정 실패",
   "nickname": "닉네임",
   "inputNickname": "닉네임을 입력하세요",
   "hotGames": "인기 게임",
-  "sportsEvents": "스포츠 이벤트",
+  "sportsEvents": "스포츠 베팅",
   "liveCasino": "라이브 카지노",
   "electronicGames": "전자 게임",
   "cardGames": "카드 게임",
@@ -292,7 +325,7 @@
   "pleaseInput": "입력하세요",
   "pleaseSelect": "선택하세요",
   "inputPlaceholder": "내용을 입력하세요",
-  "pending": "대기 중",
+  "pending": "심사 대기",
   "approved": "승인됨",
   "rejected": "거부됨",
   "processing": "처리 중",
@@ -304,9 +337,9 @@
   "confirmLogout": "로그아웃하시겠습니까?",
   "applyTime": "신청 시간",
   "completeTime": "완료 시간",
-  "rechargeDetail": "충전 상세내역",
+  "rechargeDetail": "충전 상세",
   "orderNumber": "주문 번호",
-  "bankAccountName": "예금주명",
+  "bankAccountName": "은행 계좌명",
   "bankCardNumber": "은행 카드 번호",
   "unknownStatus": "알 수 없는 상태",
   "getRechargeRecordFailed": "충전 기록 가져오기 실패"
