--- a/src/lang/th_TH.json
+++ b/src/lang/th_TH.json
@@ -4,20 +4,56 @@
     "gift": "โปรโมชั่น",
     "kf": "ฝ่ายบริการ",
     "mine": "ของฉัน",
-    "collectionSuccess": "เก็บรายการโปรดสำเร็จ",
+    "collectionSuccess": "เพิ่มรายการโปรดสำเร็จ",
     "noLogin": "ยังไม่ได้เข้าสู่ระบบ",
-    "loginCheck": "เข้าสู่ระบบเพื่อดู"
+    "loginCheck": "เข้าสู่ระบบเพื่อดู",
+    "downloadApp": "ดาวน์โหลดแอปมือถือ",
+    "hotline": "สายด่วน"
   },
   "user": {
     "register": "สมัครสมาชิก",
     "settings": "ตั้งค่า",
     "conactUs": "ติดต่อเรา"
   },
+  "game": {
+    "myCollection": "รายการโปรดของฉัน",
+    "start": "เริ่ม",
+    "venues": "ค่ายเกม"
+  },
+  "common": {
+    "viewMore": "ดูเพิ่มเติม",
+    "viewDetails": "ดูรายละเอียด"
+  },
+  "footer": {
+    "brandInfo1": "ATB ประเทศจีน โดยแพลตฟอร์ม MI (ไต้หวัน)",
+    "brandInfo2": "ทีมงานให้การสนับสนุนด้านเทคโนโลยี",
+    "mga": "ใบอนุญาตมอลตา (MGA)",
+    "bvi": "การรับรองหมู่เกาะบริติชเวอร์จิน (BVI)",
+    "gc": "คณะกรรมการกำกับดูแล GC ของสหราชอาณาจักร",
+    "pagcor": "ใบอนุญาตกำกับดูแลฟิลิปปินส์ (PAGCOR)",
+    "consultNow": "ปรึกษาทันที",
+    "disclaimer": "ATB ประเทศจีน มีใบอนุญาตที่ถูกต้องตามกฎหมายจาก MGA มอลตายุโรป, คณะกรรมการกำกับดูแล GC ของสหราชอาณาจักร และรัฐบาลฟิลิปปินส์ (PAGCOR) จดทะเบียนในหมู่เกาะบริติชเวอร์จิน เป็นบริษัทที่ถูกต้องตามกฎหมายที่ได้รับการรับรองจากสมาคมอุตสาหกรรมระหว่างประเทศ ก่อนลงทะเบียนและเล่นเกม โปรดตรวจสอบว่าคุณมีอายุ 18 ปีขึ้นไป!",
+    "copyright": "ลิขสิทธิ์ ©2019-2023 ATB ประเทศจีน สงวนลิขสิทธิ์"
+  },
+  "home": {
+    "newMemberOffer": "โปรโมชั่นสมาชิกใหม่",
+    "moreOffersInVip": "โปรโมชั่นเพิ่มเติมใน VIP",
+    "electronicOffer": "โปรโมชั่นเกมอิเล็กทรอนิกส์",
+    "electronicOfferDesc": "ฝากเงินรับโบนัส 25% สำหรับเกมอิเล็กทรอนิกส์",
+    "liveOffer": "โปรโมชั่นคาสิโนสด",
+    "liveOfferDesc": "สมาชิกรับโบนัส 30% จากการฝากครั้งแรก",
+    "safeBetting": "เดิมพันปลอดภัย แบบเรียลไทม์",
+    "enjoyExperience": "สัมผัสประสบการณ์ที่ปลายนิ้ว",
+    "appDescription": "แอปพลิเคชันความบันเทิงแบบครบวงจรแห่งแรกของโลก ด้วยการทำงานที่ลื่นไหลและสมบูรณ์แบบ กีฬามากมาย เกมตกปลา คาสิโนสด การเดิมพันลอตเตอรี่และเกมอิเล็กทรอนิกส์ โครงการความบันเทิงใหม่ล่าสุดและครบถ้วนที่สุดอยู่ในมือคุณ สแกน QR Code เพื่อดาวน์โหลดทันที!",
+    "scanTip": "(คำแนะนำ: ใช้เบราว์เซอร์หรือกล้องในโทรศัพท์สแกน QR Code เพื่อดาวน์โหลด)",
+    "browserAccess": "เบราว์เซอร์มือถือสามารถเข้าถึงได้โดยตรง",
+    "comprehensiveChoice": "ครอบคลุมทุกทางเลือก"
+  },
   "noData": "ไม่มีข้อมูล",
   "all": "ทั้งหมด",
   "activity_detail": "รายละเอียดกิจกรรม",
   "mine": {
-    "safeSetting": "การตั้งค่าความปลอดภัย",
+    "safeSetting": "ตั้งค่าความปลอดภัย",
     "aboutUs": "เกี่ยวกับเรา",
     "logout": "ออกจากระบบ",
     "loginPwd": "รหัสผ่านเข้าสู่ระบบ",
@@ -34,73 +70,73 @@
     "settingWithdrawalPwd": "ตั้งรหัสผ่านถอนเงิน",
     "modifyWithdrawalPwd": "เปลี่ยนรหัสผ่านถอนเงิน",
     "currPwd": "รหัสผ่านปัจจุบัน",
-    "inputCurrPwd": "กรุณากรอกรหัสผ่านเก่า",
+    "inputCurrPwd": "กรุณากรอกรหัสผ่านเดิม",
     "newPwd": "รหัสผ่านใหม่",
     "inputNewPwd": "กรุณากรอกรหัสผ่านใหม่",
     "confrmNewPwd": "ยืนยันรหัสผ่านใหม่",
-    "newPwdDiff": "รหัสผ่านใหม่ที่กรอกสองครั้งไม่ตรงกัน",
+    "newPwdDiff": "รหัสผ่านใหม่ไม่ตรงกัน",
     "successAndLoginAgain": "แก้ไขสำเร็จ กรุณาเข้าสู่ระบบใหม่",
     "qknewPwd": "รหัสผ่านถอนเงิน",
     "inputPlz": "กรุณากรอก",
     "inputPlzAgain": "กรุณากรอกอีกครั้ง",
-    "inputTisDiff": "ข้อมูลที่กรอกสองครั้งไม่ตรงกัน",
+    "inputTisDiff": "การกรอกสองครั้งไม่ตรงกัน",
     "confrmqkPwd": "ยืนยันรหัสผ่านถอนเงิน",
     "name": "ชื่อผู้ใช้",
-    "canDrawMoney": "จำนวนเงินที่ถอนได้",
+    "canDrawMoney": "ยอดเงินที่ถอนได้",
     "shouChannel": "ที่อยู่รับเงิน",
-    "cardName": "ชื่อผู้ถือบัตร",
+    "cardName": "ชื่อเจ้าของบัตร",
     "cardAccount": "บัญชีธนาคาร",
-    "drawMoney": "จำนวนเงินที่ถอน",
+    "drawMoney": "จำนวนเงินถอน",
     "drawingPwd": "รหัสผ่านถอนเงิน",
     "allMoney": "ทั้งหมด",
-    "notSetDrawingPwd": "คุณยังไม่ได้ตั้งรหัสผ่านถอนเงิน กรุณาตั้งรหัสผ่านถอนเงินก่อนดำเนินการ",
+    "notSetDrawingPwd": "คุณยังไม่ได้ตั้งรหัสผ่านถอนเงิน กรุณาตั้งรหัสผ่านก่อน",
     "bindDrawingAddress": "กรุณาผูกบัตรธนาคารก่อน",
     "vipDetial": "กฎการเลื่อนระดับ",
     "vipLiJin": "โบนัสเลื่อนระดับ",
     "bet": "เดิมพัน",
-    "allDaBiao": "ผ่านเกณฑ์ทั้งหมด",
-    "moneyLog": "ประวัติการทำธุรกรรม",
+    "allDaBiao": "บรรลุเป้าหมายทั้งหมด",
+    "moneyLog": "บันทึกการทำรายการ",
     "operateType": "ประเภทการเปลี่ยนแปลง",
     "walletType": "ประเภทจำนวนเงิน",
     "today": "วันนี้",
     "yestoday": "เมื่อวาน",
-    "week": "ภายในหนึ่งสัปดาห์",
-    "month": "ภายในหนึ่งเดือน",
+    "week": "ภายใน 1 สัปดาห์",
+    "month": "ภายใน 1 เดือน",
     "all": "ทั้งหมด",
     "money_rebate": "กระเป๋าเงินคืน",
     "money_fanyong": "กระเป๋าค่าคอมมิชชั่น",
-    "money": "กระเป๋าหลัก",
+    "money": "กระเป๋าเงินหลัก",
     "moneyLogAmount": "จำนวนเงินหมุนเวียน",
     "validAmount": "จำนวนเงินที่ใช้ได้",
     "gameLog": "บันทึกเกม",
-    "totalBetAmount": "ยอดเดิมพันทั้งหมด",
-    "totalWinLoss": "ยอดชนะ/แพ้ทั้งหมด",
-    "apiType": "ประเภทอินเทอร์เฟซ",
+    "totalBetAmount": "ยอดเดิมพันรวม",
+    "totalWinLoss": "แพ้ชนะรวม",
+    "apiType": "ประเภทอินเตอร์เฟซ",
     "gameType": "ประเภทเกม",
-    "tuiguanG": "โปรโมทสร้างรายได้",
+    "tuiguanG": "หาเงินจากการแนะนำ",
     "baseInfo": "ข้อมูลพื้นฐาน",
-    "transferAmount": "แปลงเครดิต",
+    "transferAmount": "โอนเครดิต",
     "totalBalance": "ยอดเงินในบัญชี",
-    "inputTransferMoney": "กรุณากรอกจำนวนเงินที่โอน",
+    "inputTransferMoney": "กรุณากรอกจำนวนเงินโอน",
     "money2": "จำนวนเงิน",
-    "myCollection": "คอลเลกชันของฉัน",
+    "myCollection": "รายการโปรดของฉัน",
     "myNotices": "ข้อความของฉัน",
     "balance": "ยอดคงเหลือ",
-    "centerWalletBalance": "ยอดคงเหลือกระเป๋าหลัก",
+    "centerWalletBalance": "ยอดกระเป๋าเงินหลัก",
     "toGame": "เข้าเกม",
     "loveIsHere": "ทุกสิ่งที่คุณรักอยู่ที่นี่",
-    "mxdaikuan": "กู้ยืมไม่มีดอกเบี้ย",
-    "yuEBao": "ยูอีเปา",
+    "mxdaikuan": "เงินกู้ไม่มีดอกเบี้ย",
+    "yuEBao": "ยอดคงเหลือบาว",
     "bankCard": "บัตรธนาคาร",
     "accountSafe": "บัญชีและความปลอดภัย",
-    "safest": "ปรับปรุงข้อมูลบัญชีให้ปลอดภัยยิ่งขึ้น",
+    "safest": "ปรับปรุงข้อมูลบัญชีเพื่อความปลอดภัยยิ่งขึ้น",
     "persionalInfo": "ข้อมูลส่วนตัว",
     "normalFunc": "ฟังก์ชั่นที่ใช้บ่อย",
-    "centerWallet": "กระเป๋าหลัก",
+    "centerWallet": "กระเป๋าเงินหลัก",
     "fsWallet": "กระเป๋าเงินคืน",
     "welcomeTo": "ยินดีต้อนรับสู่",
     "levelRight": "สิทธิพิเศษระดับ",
-    "pullMoney": "โปรโมทสร้างรายได้",
+    "pullMoney": "หาเงินจากการแนะนำ",
     "loginRegister": "เข้าสู่ระบบ/สมัครสมาชิก",
     "passwordTooShort": "รหัสผ่านต้องมีอย่างน้อย 6 ตัวอักษร"
   },
@@ -108,45 +144,45 @@
   "submit": "ส่ง",
   "inputNewPwdAgain": "กรุณากรอกรหัสผ่านใหม่อีกครั้ง",
   "success": "ดำเนินการสำเร็จ",
-  "noMore": "ไม่มีอีกแล้ว",
+  "noMore": "ไม่มีเพิ่มเติมแล้ว",
   "moneyLog": {
     "detail": "รายละเอียดบันทึก",
-    "tradeMoney": "จำนวนเงินธุรกรรม",
-    "beforeMoney": "ยอดคงเหลือก่อนโอน",
-    "afterMoney": "ยอดคงเหลือหลังโอน",
+    "tradeMoney": "จำนวนเงินทำรายการ",
+    "beforeMoney": "ยอดก่อนโอน",
+    "afterMoney": "ยอดหลังโอน",
     "walletType": "ประเภทกระเป๋าเงิน",
     "transferType": "ประเภทการโอน",
     "desc": "คำอธิบายการดำเนินการ",
-    "tradeDate": "เวลาทำธุรกรรม",
+    "tradeDate": "เวลาทำรายการ",
     "status": "สถานะเกม"
   },
   "fillIn": "กรอก",
   "changeAuto": "เปลี่ยนเป็นอัตโนมัติ",
-  "changeManual": "เปลี่ยนเป็นแบบแมนนวล",
+  "changeManual": "เปลี่ยนเป็นแมนนวล",
   "confirm": "ยืนยัน",
   "dianzi": "เกมอิเล็กทรอนิกส์",
-  "zhenren": "เกมสด",
+  "zhenren": "เกมคาสิโนสด",
   "tiyu": "เกมกีฬา",
   "lottery": "เกมลอตเตอรี่",
   "qipai": "เกมไพ่",
   "fishGame": "เกมตกปลา",
-  "noRecord": "ยังไม่มีข้อมูล",
-  "unread": "ยังไม่ได้อ่าน",
+  "noRecord": "ไม่มีข้อมูล",
+  "unread": "ยังไม่อ่าน",
   "readed": "อ่านแล้ว",
   "transferIn": "โอนเข้า",
-  "inputTransferInAmount": "กรุณากรอกจำนวนเงินที่โอนเข้า",
-  "todayDoNotShow": "วันนี้ไม่ต้องแสดงอีก",
+  "inputTransferInAmount": "กรุณากรอกจำนวนเงินโอนเข้า",
+  "todayDoNotShow": "วันนี้ไม่แสดงอีก",
   "enterGame": "เข้าเกม",
-  "transferInMoneyMustThan0": "จำนวนเงินที่โอนต้องมากกว่า 0",
+  "transferInMoneyMustThan0": "จำนวนเงินโอนเข้าต้องมากกว่า 0",
   "refreshBalanceFailed": "รีเฟรชยอดคงเหลือล้มเหลว",
   "depositFailed": "แปลงเครดิตล้มเหลว",
-  "moneyTransferMoneyNot": "กระเป๋าเงินไม่สามารถโอนระหว่างกันได้",
-  "daliySign": "เช็คอินประจำวัน",
+  "moneyTransferMoneyNot": "ไม่สามารถโอนระหว่างกระเป๋าเงิน",
+  "daliySign": "เช็คอินรายวัน",
   "support": {
     "welcome": "ยินดีต้อนรับสู่ศูนย์บริการลูกค้า",
     "mainCustom": "ฝ่ายบริการหลัก",
     "agentCoustom": "ตัวแทนฝ่ายบริการลูกค้า",
-    "serviceTop": "บริการตลอด 24 ชั่วโมง ใส่ใจทุกรายละเอียด",
+    "serviceTop": "บริการสายด่วน 24 ชั่วโมง",
     "onlineService": "บริการออนไลน์",
     "vipService": "บริการ VIP",
     "agentCooperation": "ความร่วมมือตัวแทน",
@@ -159,26 +195,23 @@
     "configLoadFailed": "โหลดการกำหนดค่าล้มเหลว กรุณาลองใหม่"
   },
   "selected": "กรุณาเลือก",
-  "game": {
-    "myCollection": "คอลเลกชันของฉัน"
-  },
   "login": {
-    "openFixed": "เปิดประสบการณ์สุดยอด",
+    "openFixed": "เปิดประสบการณ์ที่ดีที่สุด",
     "inputAccount": "กรุณากรอกบัญชี",
-    "inputRight": "กรุณากรอกข้อมูลที่ถูกต้อง",
+    "inputRight": "กรุณากรอกเนื้อหาที่ถูกต้อง",
     "inputPwd": "กรุณากรอกรหัสผ่าน",
     "login": "เข้าสู่ระบบ",
     "forgetPwd": "ลืมรหัสผ่าน?",
     "register": "สมัครสมาชิก",
-    "resetpwdForCustomer": "กรุณาติดต่อฝ่ายบริการลูกค้าเพื่อรีเซ็ตรหัสผ่าน",
+    "resetpwdForCustomer": "กรุณาติดต่อฝ่ายบริการเพื่อรีเซ็ตรหัสผ่าน",
     "loginSuccess": "เข้าสู่ระบบสำเร็จ"
   },
-  "rememberMe": "จำรหัสผ่าน",
-  "weiHuZhong": "กำลังบำรุงรักษาเกมแพลตฟอร์ม...",
+  "rememberMe": "จดจำรหัสผ่าน",
+  "weiHuZhong": "แพลตฟอร์มเกมกำลังบำรุงรักษา...",
   "pay_type": "วิธีการชำระเงิน",
   "online_pay": "ชำระเงินออนไลน์",
-  "company_pay": "ฝากเงินบริษัท",
-  "pay_channel": "ช่องทางการชำระเงิน",
+  "company_pay": "ฝากเงินผ่านบริษัท",
+  "pay_channel": "ช่องทางชำระเงิน",
   "recharge_qrcode": "QR Code รับเงิน",
   "recharge_account": "บัญชีรับเงิน",
   "copy": "คัดลอก",
@@ -196,9 +229,9 @@
   "transfer_address": "ที่อยู่เติมเงิน",
   "input_transfer_addr": "กรุณากรอกที่อยู่เติมเงิน",
   "transfer_out_address": "ที่อยู่โอนออก",
-  "input_transfer_out_addr": "กรุณากรอกที่อยู่กระเป๋าเงินที่โอนออก",
+  "input_transfer_out_addr": "กรุณากรอกที่อยู่กระเป๋าเงินโอนออก",
   "game_log": {
-    "not_cpmpelete": "ยังไม่ชำระ",
+    "not_cpmpelete": "ยังไม่ได้ชำระ",
     "cancel": "ยกเลิกแล้ว",
     "complete": "เสร็จสมบูรณ์"
   },
@@ -224,40 +257,40 @@
     "email": "อีเมล"
   },
   "vip": {
-    "dqCK": "เงินฝากปัจจุบัน",
-    "dqBet": "การเดิมพันปัจจุบัน",
+    "dqCK": "ฝากเงินปัจจุบัน",
+    "dqBet": "เดิมพันปัจจุบัน",
     "amount": "โบนัสเลื่อนระดับ",
     "zhuanXiang": "พิเศษ",
-    "dayLJ": "ของขวัญรายวัน",
-    "weekLJ": "ของขวัญรายสัปดาห์",
-    "monthLJ": "ของขวัญรายเดือน",
-    "brithdayLJ": "ของขวัญวันเกิด",
+    "dayLJ": "โบนัสรายวัน",
+    "weekLJ": "โบนัสรายสัปดาห์",
+    "monthLJ": "โบนัสรายเดือน",
+    "brithdayLJ": "โบนัสวันเกิด",
     "rightDetail": "รายละเอียดสิทธิพิเศษ VIP"
   },
   "add": "เพิ่ม",
-  "sweetWarning": "คำแนะนำ",
+  "sweetWarning": "คำเตือน",
   "deposit": {
-    "detail1": "1. ธนาคารที่แสดงด้านบนเป็นธนาคารที่รองรับ \"การชำระเงินออนไลน์\" เลือกธนาคารที่คุณต้องการชำระเงิน",
-    "detail2": "2. กรอกจำนวนเงินที่ต้องการชำระในช่อง \"จำนวนเงินฝาก\" และคลิกปุ่ม \"ส่ง\"",
-    "detail3": "3. หลังจากฝากเงินสำเร็จ ต้องเดิมพันครบ 1 เท่าของยอดฝากจึงจะถอนเงินได้ (ป้องกันการฟอกเงิน)"
+    "detail1": "1. ธนาคารที่แสดงด้านบนรองรับ 'การชำระเงินออนไลน์' เลือกธนาคารที่คุณต้องการชำระเงิน",
+    "detail2": "2. กรอกจำนวนเงินที่ต้องการชำระในช่อง 'จำนวนเงินฝาก' และคลิกปุ่ม 'ส่ง'",
+    "detail3": "3. หลังจากฝากเงินสำเร็จ ต้องทำยอดเทิร์นโอเวอร์ 1 เท่าจึงจะถอนได้ (ป้องกันการฟอกเงิน)"
   },
   "youhuihuodong": "กิจกรรมโปรโมชั่น",
   "systemAnnouncement": "ประกาศระบบ",
-  "customerService": "ฝ่ายบริการลูกค้า",
-  "financeAddress": "ที่อยู่การเงิน",
+  "customerService": "ที่อยู่ฝ่ายบริการ",
+  "financeAddress": "ที่อยู่ฝ่ายการเงิน",
   "clickToOpen": "คลิกเพื่อเปิด",
   "hotline": "สายด่วน",
-  "rechargeRecord": "ประวัติการเติมเงิน",
+  "rechargeRecord": "บันทึกการเติมเงิน",
   "rechargeAmount": "จำนวนเงินเติม",
   "transferBankName": "ชื่อธนาคารที่โอน",
   "inputTransferBankName": "กรุณากรอกชื่อธนาคารที่โอน",
   "inputBankCardNumber": "กรุณากรอกหมายเลขบัตรธนาคาร",
   "inputHuiwangAccount": "กรุณากรอกบัญชี Huiwang",
-  "inputUSDTAddress": "กรุณากรอกที่อยู่กระเป๋า USDT",
+  "inputUSDTAddress": "กรุณากรอกที่อยู่กระเป๋าเงิน USDT",
   "rechargeSubmitSuccess": "ส่งคำขอเติมเงินสำเร็จ",
   "warmTips": "คำแนะนำ",
-  "rebateRecord": "ประวัติเงินคืน",
-  "commissionRecord": "ประวัติค่าคอมมิชชั่น",
+  "rebateRecord": "บันทึกเงินคืน",
+  "commissionRecord": "บันทึกค่าคอมมิชชั่น",
   "subordinateMembers": "สมาชิกระดับล่าง",
   "teamInfo": "ข้อมูลทีม",
   "agentRecord": "บันทึกตัวแทน",
@@ -266,11 +299,11 @@
   "memberAddCredits": "เพิ่มเครดิตสมาชิก",
   "confirmTransfer": "ยืนยันการโอน",
   "transferAmountTip1": "จำนวนเงินโอนจะถูกหักจากยอดคงเหลือของคุณ",
-  "transferAmountTip2": "การโอนจะเข้าบัญชีทันทีและไม่สามารถยกเลิกได้",
+  "transferAmountTip2": "หลังจากโอนจะได้รับทันที ไม่สามารถยกเลิกได้",
   "transferAmountTip3": "กรุณาตรวจสอบข้อมูลสมาชิกและจำนวนเงินอย่างละเอียด",
-  "setAsDefault": "ตั้งเป็นค่าเริ่มต้น",
-  "confirmSetDefault": "ยืนยันการตั้งบัญชีนี้เป็นค่าเริ่มต้น?",
-  "alreadyDefault": "บัญชีนี้เป็นค่าเริ่มต้นอยู่แล้ว",
+  "setAsDefault": "ตั้งเป็นบัญชีเริ่มต้น",
+  "confirmSetDefault": "คุณต้องการตั้งบัญชีนี้เป็นบัญชีเริ่มต้นหรือไม่?",
+  "alreadyDefault": "บัญชีนี้เป็นบัญชีเริ่มต้นอยู่แล้ว",
   "settingSuccess": "ตั้งค่าสำเร็จ",
   "settingFailed": "ตั้งค่าล้มเหลว",
   "nickname": "ชื่อเล่น",
@@ -292,16 +325,16 @@
   "pleaseInput": "กรุณากรอก",
   "pleaseSelect": "กรุณาเลือก",
   "inputPlaceholder": "กรุณากรอกเนื้อหา",
-  "pending": "รอดำเนินการ",
+  "pending": "รอการตรวจสอบ",
   "approved": "อนุมัติแล้ว",
-  "rejected": "ปฏิเสธ",
+  "rejected": "ปฏิเสธแล้ว",
   "processing": "กำลังดำเนินการ",
-  "completed": "เสร็จสิ้น",
+  "completed": "เสร็จสมบูรณ์",
   "networkError": "คำขอเครือข่ายล้มเหลว",
   "tryAgainLater": "กรุณาลองใหม่ภายหลัง",
   "dataLoadFailed": "โหลดข้อมูลล้มเหลว",
   "parameterError": "ข้อผิดพลาดพารามิเตอร์",
-  "confirmLogout": "ยืนยันการออกจากระบบ?",
+  "confirmLogout": "ยืนยันออกจากระบบ?",
   "applyTime": "เวลาสมัคร",
   "completeTime": "เวลาเสร็จสิ้น",
   "rechargeDetail": "รายละเอียดการเติมเงิน",
@@ -309,5 +342,5 @@
   "bankAccountName": "ชื่อบัญชีธนาคาร",
   "bankCardNumber": "หมายเลขบัตรธนาคาร",
   "unknownStatus": "สถานะไม่ทราบ",
-  "getRechargeRecordFailed": "ไม่สามารถรับประวัติการเติมเงิน"
+  "getRechargeRecordFailed": "ดึงบันทึกการเติมเงินล้มเหลว"
 }
