--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -5,55 +5,91 @@
     "kf": "客服",
     "mine": "我的",
     "collectionSuccess": "收藏成功",
-    "noLogin": "未登入",
-    "loginCheck": "登入後查看"
+    "noLogin": "未登錄",
+    "loginCheck": "登錄後查看",
+    "downloadApp": "下載手機版",
+    "hotline": "熱線電話"
   },
   "user": {
     "register": "註冊",
-    "settings": "設定",
-    "conactUs": "聯絡我們"
+    "settings": "設置",
+    "conactUs": "聯繫我們"
+  },
+  "game": {
+    "myCollection": "我的收藏",
+    "start": "開始",
+    "venues": "場館"
+  },
+  "common": {
+    "viewMore": "查看更多",
+    "viewDetails": "查看詳情"
+  },
+  "footer": {
+    "brandInfo1": "ATB 中國由MI平台 (台灣)",
+    "brandInfo2": "包網團隊提供平台技術支持",
+    "mga": "馬耳他牌照（MGA）認證",
+    "bvi": "英屬維爾京群島（BVI）認證",
+    "gc": "英國GC監督委員會",
+    "pagcor": "菲律賓（PAGCOR）監督牌照",
+    "consultNow": "立即諮詢",
+    "disclaimer": "ATB 中國擁有歐洲馬耳他MGA、英國GC監督委員會（GamblingCommission）和菲律賓政府（PAGCOR）頒發的合法執照。註冊於英屬維爾京群島，是受國際行業協會認可的合法公司。進行註冊並娛樂前，請確保您年滿18周歲！",
+    "copyright": "版權所有 ©2019-2023 ATB 中國 保留所有權"
+  },
+  "home": {
+    "newMemberOffer": "新會員優惠",
+    "moreOffersInVip": "更多優惠盡在VIP",
+    "electronicOffer": "電子遊戲專屬優惠",
+    "electronicOfferDesc": "電子遊藝專屬存款送25%優惠",
+    "liveOffer": "真人視訊專屬優惠",
+    "liveOfferDesc": "會員首筆存款得30％的獎金",
+    "safeBetting": "安全暢快 實時投注",
+    "enjoyExperience": "縱想指尖暢快體驗",
+    "appDescription": "全球首家一體化娛樂原生APP，盡顯流暢、完美操作。海量體育、捕魚遊戲，真人娛樂、彩票投注及電子遊藝等，最新最全娛樂項目盡在掌中體驗掃碼下載，即刻擁有！",
+    "scanTip": "(提示：用手機自帶瀏覽器掃碼或者使用手機自帶的照相機掃描二維碼下載）",
+    "browserAccess": "手機瀏覽器也能直接訪問",
+    "comprehensiveChoice": "包容萬象 從容選擇"
   },
   "noData": "無數據",
   "all": "全部",
   "activity_detail": "活動詳情",
   "mine": {
-    "safeSetting": "安全設定",
+    "safeSetting": "安全設置",
     "aboutUs": "關於我們",
-    "logout": "登出登入",
-    "loginPwd": "登入密碼",
+    "logout": "退出登錄",
+    "loginPwd": "登錄密碼",
     "withdrawPwd": "提現密碼",
     "deposit": "存款",
-    "withdraw": "提款",
+    "withdraw": "取款",
     "vip": "VIP特權",
-    "quickDeposit": "快速儲值",
+    "quickDeposit": "快速充值",
     "sunmitWithdraw": "申請提款",
-    "bankManage": "金融卡管理",
+    "bankManage": "銀行卡管理",
     "edit": "修改",
     "addBind": "增加綁定",
     "modifyLoginPwd": "修改登入密碼",
-    "settingWithdrawalPwd": "設定提款密碼",
-    "modifyWithdrawalPwd": "修改提款密碼",
-    "currPwd": "目前密碼",
+    "settingWithdrawalPwd": "設置取款密碼",
+    "modifyWithdrawalPwd": "修改取款密碼",
+    "currPwd": "當前密碼",
     "inputCurrPwd": "請填寫舊密碼",
     "newPwd": "新密碼",
     "inputNewPwd": "請填寫新密碼",
     "confrmNewPwd": "確認新密碼",
     "newPwdDiff": "新密碼兩次輸入不一致",
-    "successAndLoginAgain": "修改成功, 請重新登入",
-    "qknewPwd": "提款密碼",
+    "successAndLoginAgain": "修改成功, 請重新登錄",
+    "qknewPwd": "取款密碼",
     "inputPlz": "請輸入",
     "inputPlzAgain": "請再次輸入",
     "inputTisDiff": "兩次輸入不一致",
-    "confrmqkPwd": "確認提款密碼",
-    "name": "使用者名稱",
+    "confrmqkPwd": "確認取款密碼",
+    "name": "用戶名",
     "canDrawMoney": "可提款金額",
     "shouChannel": "收款地址",
     "cardName": "持卡人姓名",
-    "cardAccount": "銀行帳戶",
+    "cardAccount": "銀行賬戶",
     "drawMoney": "提款金額",
     "drawingPwd": "提款密碼",
     "allMoney": "全部",
-    "notSetDrawingPwd": "您還未設定提款密碼，請先設定提款密碼再操作",
+    "notSetDrawingPwd": "您還未設置取款密碼，請先設置取款密碼再操作",
     "bindDrawingAddress": "請先綁定銀行卡",
     "vipDetial": "晉級規則",
     "vipLiJin": "晉級禮金",
@@ -68,20 +104,20 @@
     "month": "一月內",
     "all": "全部",
     "money_rebate": "返水錢包",
-    "money_fanyong": "返佣錢包",
+    "money_fanyong": "返傭錢包",
     "money": "中心錢包",
     "moneyLogAmount": "流水金額",
     "validAmount": "有效金額",
     "gameLog": "遊戲記錄",
     "totalBetAmount": "總投注金額",
     "totalWinLoss": "總輸贏",
-    "apiType": "介面類型",
+    "apiType": "接口類型",
     "gameType": "遊戲類型",
     "tuiguanG": "推廣賺錢",
-    "baseInfo": "基本訊息",
+    "baseInfo": "基本信息",
     "transferAmount": "額度轉換",
-    "totalBalance": "帳戶餘額",
-    "inputTransferMoney": "請輸入轉帳金額",
+    "totalBalance": "賬戶餘額",
+    "inputTransferMoney": "請輸入轉賬金額",
     "money2": "金額",
     "myCollection": "我的收藏",
     "myNotices": "我的消息",
@@ -91,9 +127,9 @@
     "loveIsHere": "你愛的都在這裡",
     "mxdaikuan": "免息借唄",
     "yuEBao": "餘額寶",
-    "bankCard": "金融卡",
-    "accountSafe": "帳戶與安全",
-    "safest": "完善帳戶訊息，更安全",
+    "bankCard": "銀行卡",
+    "accountSafe": "賬戶與安全",
+    "safest": "完善賬戶信息，更安全",
     "persionalInfo": "個人資料",
     "normalFunc": "常用功能",
     "centerWallet": "中心錢包",
@@ -115,7 +151,7 @@
     "beforeMoney": "轉入前餘額",
     "afterMoney": "轉入後餘額",
     "walletType": "錢包類型",
-    "transferType": "轉帳類型",
+    "transferType": "轉賬類型",
     "desc": "操作描述",
     "tradeDate": "交易時間",
     "status": "遊戲狀態"
@@ -147,31 +183,28 @@
     "mainCustom": "主線客服",
     "agentCoustom": "客戶服務代表",
     "serviceTop": "小時專線服務 貼心至上",
-    "onlineService": "線上客服",
+    "onlineService": "在線客服",
     "vipService": "VIP客服",
     "agentCooperation": "代理合作",
     "complaints": "投訴建議",
     "telegram": "Telegram",
     "whatsapp": "WhatsApp",
     "noServiceConfig": "暫無服務配置",
-    "linkNotConfigured": "{{name}}連結未配置",
-    "openLinkFailed": "開啟{{name}}失敗",
-    "configLoadFailed": "配置載入失敗，請重試"
+    "linkNotConfigured": "{{name}}鏈接未配置",
+    "openLinkFailed": "打開{{name}}失敗",
+    "configLoadFailed": "配置加載失敗，請重試"
   },
   "selected": "請選擇",
-  "game": {
-    "myCollection": "我的收藏"
-  },
   "login": {
     "openFixed": "開啟極致體驗",
-    "inputAccount": "請輸入帳號",
+    "inputAccount": "請輸入賬號",
     "inputRight": "請輸入正確內容",
     "inputPwd": "請輸入密碼",
-    "login": "登入",
+    "login": "登錄",
     "forgetPwd": "忘記密碼？",
     "register": "註冊",
-    "resetpwdForCustomer": "請聯絡客服重設密碼",
-    "loginSuccess": "登入成功"
+    "resetpwdForCustomer": "請聯繫客服重置密碼",
+    "loginSuccess": "登錄成功"
   },
   "rememberMe": "記住密碼",
   "weiHuZhong": "平台遊戲維護中...",
@@ -203,7 +236,7 @@
     "complete": "已完成"
   },
   "register": {
-    "username": "使用者名稱",
+    "username": "用戶名",
     "inputUsername": "請填寫用戶名",
     "password": "密碼",
     "inputPassword": "請填寫密碼",
@@ -229,7 +262,7 @@
     "amount": "晉升禮金",
     "zhuanXiang": "專享",
     "dayLJ": "每日禮金",
-    "weekLJ": "每周禮金",
+    "weekLJ": "每週禮金",
     "monthLJ": "每月禮金",
     "brithdayLJ": "生日禮金",
     "rightDetail": "VIP特權詳情"
@@ -249,30 +282,30 @@
   "hotline": "熱線電話",
   "rechargeRecord": "充值記錄",
   "rechargeAmount": "充值金額",
-  "transferBankName": "轉帳銀行名稱",
-  "inputTransferBankName": "請輸入轉帳銀行名稱",
+  "transferBankName": "轉賬銀行名稱",
+  "inputTransferBankName": "請輸入轉賬銀行名稱",
   "inputBankCardNumber": "請輸入銀行卡號",
-  "inputHuiwangAccount": "請輸入匯旺帳號",
+  "inputHuiwangAccount": "請輸入匯旺賬號",
   "inputUSDTAddress": "請輸入USDT錢包地址",
   "rechargeSubmitSuccess": "充值申請提交成功",
   "warmTips": "溫馨提示",
   "rebateRecord": "返水記錄",
-  "commissionRecord": "返佣記錄",
+  "commissionRecord": "返傭記錄",
   "subordinateMembers": "下級會員",
-  "teamInfo": "團隊資訊",
+  "teamInfo": "團隊信息",
   "agentRecord": "代理記錄",
   "adjustProportion": "調整比例",
   "addCredits": "上分",
   "memberAddCredits": "會員上分",
-  "confirmTransfer": "確認轉帳",
-  "transferAmountTip1": "轉帳金額將從您的餘額中扣除",
-  "transferAmountTip2": "轉帳後立即到帳，無法撤回",
-  "transferAmountTip3": "請仔細核對會員資訊和金額",
-  "setAsDefault": "設為預設帳戶",
-  "confirmSetDefault": "確定要將此帳戶設為預設帳戶嗎？",
-  "alreadyDefault": "該帳戶已經是預設帳戶",
-  "settingSuccess": "設定成功",
-  "settingFailed": "設定失敗",
+  "confirmTransfer": "確認轉賬",
+  "transferAmountTip1": "轉賬金額將從您的餘額中扣除",
+  "transferAmountTip2": "轉賬後立即到賬，無法撤回",
+  "transferAmountTip3": "請仔細核對會員信息和金額",
+  "setAsDefault": "設為默認賬戶",
+  "confirmSetDefault": "確定要將此賬戶設為默認賬戶嗎？",
+  "alreadyDefault": "該賬戶已經是默認賬戶",
+  "settingSuccess": "設置成功",
+  "settingFailed": "設置失敗",
   "nickname": "暱稱",
   "inputNickname": "請輸入暱稱",
   "hotGames": "熱門遊戲",
@@ -284,10 +317,10 @@
   "lotteryGames": "彩票遊戲",
   "edit": "編輯",
   "delete": "刪除",
-  "save": "儲存",
+  "save": "保存",
   "cancel": "取消",
-  "refresh": "重新整理",
-  "search": "搜尋",
+  "refresh": "刷新",
+  "search": "搜索",
   "operationFailed": "操作失敗",
   "pleaseInput": "請輸入",
   "pleaseSelect": "請選擇",
@@ -297,11 +330,11 @@
   "rejected": "已拒絕",
   "processing": "處理中",
   "completed": "已完成",
-  "networkError": "網路請求失敗",
+  "networkError": "網絡請求失敗",
   "tryAgainLater": "請稍後重試",
-  "dataLoadFailed": "資料載入失敗",
+  "dataLoadFailed": "數據加載失敗",
   "parameterError": "參數錯誤",
-  "confirmLogout": "確認登出？",
+  "confirmLogout": "確認退出登錄？",
   "applyTime": "申請時間",
   "completeTime": "完成時間",
   "rechargeDetail": "充值詳情",
