--- a/src/lang/vi_VN.json
+++ b/src/lang/vi_VN.json
@@ -2,20 +2,56 @@
   "main": {
     "index": "Trang chủ",
     "gift": "Khuyến mãi",
-    "kf": "Hỗ trợ",
+    "kf": "Dịch vụ khách hàng",
     "mine": "Của tôi",
     "collectionSuccess": "Thêm yêu thích thành công",
     "noLogin": "Chưa đăng nhập",
-    "loginCheck": "Đăng nhập để xem"
+    "loginCheck": "Đăng nhập để xem",
+    "downloadApp": "Tải ứng dụng di động",
+    "hotline": "Đường dây nóng"
   },
   "user": {
     "register": "Đăng ký",
     "settings": "Cài đặt",
     "conactUs": "Liên hệ chúng tôi"
   },
+  "game": {
+    "myCollection": "Yêu thích của tôi",
+    "start": "Bắt đầu",
+    "venues": "Sảnh game"
+  },
+  "common": {
+    "viewMore": "Xem thêm",
+    "viewDetails": "Xem chi tiết"
+  },
+  "footer": {
+    "brandInfo1": "ATB Trung Quốc do nền tảng MI (Đài Loan)",
+    "brandInfo2": "Đội ngũ cung cấp hỗ trợ công nghệ nền tảng",
+    "mga": "Giấy phép Malta (MGA)",
+    "bvi": "Chứng nhận Quần đảo Virgin thuộc Anh (BVI)",
+    "gc": "Ủy ban Giám sát GC Vương quốc Anh",
+    "pagcor": "Giấy phép giám sát Philippines (PAGCOR)",
+    "consultNow": "Tư vấn ngay",
+    "disclaimer": "ATB Trung Quốc sở hữu giấy phép hợp pháp do MGA Malta châu Âu, Ủy ban Giám sát GC Vương quốc Anh và Chính phủ Philippines (PAGCOR) cấp. Đăng ký tại Quần đảo Virgin thuộc Anh, là công ty hợp pháp được Hiệp hội Công nghiệp Quốc tế công nhận. Trước khi đăng ký và giải trí, vui lòng đảm bảo bạn đủ 18 tuổi!",
+    "copyright": "Bản quyền ©2019-2023 ATB Trung Quốc Bảo lưu mọi quyền"
+  },
+  "home": {
+    "newMemberOffer": "Ưu đãi thành viên mới",
+    "moreOffersInVip": "Thêm nhiều ưu đãi trong VIP",
+    "electronicOffer": "Ưu đãi độc quyền game điện tử",
+    "electronicOfferDesc": "Nạp tiền nhận thưởng 25% cho game điện tử",
+    "liveOffer": "Ưu đãi độc quyền casino trực tiếp",
+    "liveOfferDesc": "Thành viên nhận thưởng 30% từ lần nạp đầu tiên",
+    "safeBetting": "Cá cược an toàn, thời gian thực",
+    "enjoyExperience": "Trải nghiệm tuyệt vời ngay trong tầm tay",
+    "appDescription": "Ứng dụng giải trí tích hợp đầu tiên trên thế giới, với hoạt động mượt mà và hoàn hảo. Vô số thể thao, game câu cá, casino trực tiếp, cá cược xổ số và game điện tử, các dự án giải trí mới nhất và đầy đủ nhất đều trong tầm tay. Quét mã QR để tải xuống ngay!",
+    "scanTip": "(Mẹo: Dùng trình duyệt hoặc camera điện thoại quét mã QR để tải xuống)",
+    "browserAccess": "Trình duyệt di động cũng có thể truy cập trực tiếp",
+    "comprehensiveChoice": "Bao la vạn tượng, lựa chọn dễ dàng"
+  },
   "noData": "Không có dữ liệu",
   "all": "Tất cả",
-  "activity_detail": "Chi tiết sự kiện",
+  "activity_detail": "Chi tiết hoạt động",
   "mine": {
     "safeSetting": "Cài đặt bảo mật",
     "aboutUs": "Về chúng tôi",
@@ -28,7 +64,7 @@
     "quickDeposit": "Nạp tiền nhanh",
     "sunmitWithdraw": "Yêu cầu rút tiền",
     "bankManage": "Quản lý thẻ ngân hàng",
-    "edit": "Chỉnh sửa",
+    "edit": "Sửa",
     "addBind": "Thêm liên kết",
     "modifyLoginPwd": "Đổi mật khẩu đăng nhập",
     "settingWithdrawalPwd": "Cài đặt mật khẩu rút tiền",
@@ -38,8 +74,8 @@
     "newPwd": "Mật khẩu mới",
     "inputNewPwd": "Vui lòng nhập mật khẩu mới",
     "confrmNewPwd": "Xác nhận mật khẩu mới",
-    "newPwdDiff": "Mật khẩu mới nhập hai lần không khớp",
-    "successAndLoginAgain": "Sửa đổi thành công, vui lòng đăng nhập lại",
+    "newPwdDiff": "Mật khẩu mới không khớp",
+    "successAndLoginAgain": "Sửa thành công, vui lòng đăng nhập lại",
     "qknewPwd": "Mật khẩu rút tiền",
     "inputPlz": "Vui lòng nhập",
     "inputPlzAgain": "Vui lòng nhập lại",
@@ -53,54 +89,54 @@
     "drawMoney": "Số tiền rút",
     "drawingPwd": "Mật khẩu rút tiền",
     "allMoney": "Tất cả",
-    "notSetDrawingPwd": "Bạn chưa cài đặt mật khẩu rút tiền. Vui lòng cài đặt trước khi thao tác",
+    "notSetDrawingPwd": "Bạn chưa cài đặt mật khẩu rút tiền, vui lòng cài đặt trước",
     "bindDrawingAddress": "Vui lòng liên kết thẻ ngân hàng trước",
     "vipDetial": "Quy tắc thăng cấp",
     "vipLiJin": "Tiền thưởng thăng cấp",
     "bet": "Cược",
-    "allDaBiao": "Đạt tất cả tiêu chuẩn",
+    "allDaBiao": "Đạt tất cả mục tiêu",
     "moneyLog": "Lịch sử giao dịch",
     "operateType": "Loại thay đổi",
     "walletType": "Loại số tiền",
     "today": "Hôm nay",
     "yestoday": "Hôm qua",
-    "week": "Trong tuần",
-    "month": "Trong tháng",
+    "week": "Trong 1 tuần",
+    "month": "Trong 1 tháng",
     "all": "Tất cả",
     "money_rebate": "Ví hoàn tiền",
     "money_fanyong": "Ví hoa hồng",
     "money": "Ví chính",
     "moneyLogAmount": "Số tiền lưu chuyển",
-    "validAmount": "Số tiền hợp lệ",
-    "gameLog": "Lịch sử trò chơi",
+    "validAmount": "Số tiền hiệu lực",
+    "gameLog": "Lịch sử game",
     "totalBetAmount": "Tổng tiền cược",
-    "totalWinLoss": "Tổng thắng/thua",
+    "totalWinLoss": "Tổng thắng thua",
     "apiType": "Loại giao diện",
-    "gameType": "Loại trò chơi",
-    "tuiguanG": "Quảng bá kiếm tiền",
+    "gameType": "Loại game",
+    "tuiguanG": "Kiếm tiền từ giới thiệu",
     "baseInfo": "Thông tin cơ bản",
     "transferAmount": "Chuyển đổi hạn mức",
     "totalBalance": "Số dư tài khoản",
     "inputTransferMoney": "Vui lòng nhập số tiền chuyển",
     "money2": "Số tiền",
-    "myCollection": "Bộ sưu tập của tôi",
+    "myCollection": "Yêu thích của tôi",
     "myNotices": "Tin nhắn của tôi",
     "balance": "Số dư",
     "centerWalletBalance": "Số dư ví chính",
-    "toGame": "Vào trò chơi",
-    "loveIsHere": "Mọi thứ bạn yêu thích đều ở đây",
+    "toGame": "Vào game",
+    "loveIsHere": "Tất cả những gì bạn yêu thích đều ở đây",
     "mxdaikuan": "Vay không lãi suất",
-    "yuEBao": "Yu'E Bao",
+    "yuEBao": "Ví tiết kiệm",
     "bankCard": "Thẻ ngân hàng",
-    "accountSafe": "Tài khoản & Bảo mật",
-    "safest": "Hoàn thiện thông tin tài khoản để an toàn hơn",
+    "accountSafe": "Tài khoản và bảo mật",
+    "safest": "Hoàn thiện thông tin tài khoản, an toàn hơn",
     "persionalInfo": "Thông tin cá nhân",
     "normalFunc": "Chức năng thường dùng",
     "centerWallet": "Ví chính",
     "fsWallet": "Ví hoàn tiền",
     "welcomeTo": "Chào mừng đến",
     "levelRight": "Đặc quyền cấp độ",
-    "pullMoney": "Quảng bá kiếm tiền",
+    "pullMoney": "Kiếm tiền từ giới thiệu",
     "loginRegister": "Đăng nhập/Đăng ký",
     "passwordTooShort": "Mật khẩu phải có ít nhất 6 ký tự"
   },
@@ -118,26 +154,26 @@
     "transferType": "Loại chuyển khoản",
     "desc": "Mô tả thao tác",
     "tradeDate": "Thời gian giao dịch",
-    "status": "Trạng thái trò chơi"
+    "status": "Trạng thái game"
   },
-  "fillIn": "Điền vào",
+  "fillIn": "Điền",
   "changeAuto": "Chuyển sang tự động",
   "changeManual": "Chuyển sang thủ công",
   "confirm": "Xác nhận",
-  "dianzi": "Trò chơi điện tử",
-  "zhenren": "Trò chơi trực tiếp",
-  "tiyu": "Trò chơi thể thao",
-  "lottery": "Trò chơi xổ số",
-  "qipai": "Trò chơi bài",
-  "fishGame": "Trò chơi câu cá",
-  "noRecord": "Chưa có dữ liệu",
+  "dianzi": "Game điện tử",
+  "zhenren": "Game casino trực tiếp",
+  "tiyu": "Game thể thao",
+  "lottery": "Game xổ số",
+  "qipai": "Game bài",
+  "fishGame": "Game bắn cá",
+  "noRecord": "Không có dữ liệu",
   "unread": "Chưa đọc",
   "readed": "Đã đọc",
   "transferIn": "Chuyển vào",
   "inputTransferInAmount": "Vui lòng nhập số tiền chuyển vào",
   "todayDoNotShow": "Hôm nay không hiển thị nữa",
-  "enterGame": "Vào trò chơi",
-  "transferInMoneyMustThan0": "Số tiền chuyển phải lớn hơn 0",
+  "enterGame": "Vào game",
+  "transferInMoneyMustThan0": "Số tiền chuyển vào phải lớn hơn 0",
   "refreshBalanceFailed": "Làm mới số dư thất bại",
   "depositFailed": "Chuyển đổi hạn mức thất bại",
   "moneyTransferMoneyNot": "Không thể chuyển đổi giữa các ví",
@@ -146,24 +182,21 @@
     "welcome": "Chào mừng đến trung tâm dịch vụ khách hàng",
     "mainCustom": "Dịch vụ khách hàng chính",
     "agentCoustom": "Đại diện dịch vụ khách hàng",
-    "serviceTop": "Dịch vụ 24/7 tận tâm phục vụ",
-    "onlineService": "Hỗ trợ trực tuyến",
-    "vipService": "Hỗ trợ VIP",
+    "serviceTop": "Dịch vụ đường dây nóng 24 giờ",
+    "onlineService": "Dịch vụ trực tuyến",
+    "vipService": "Dịch vụ VIP",
     "agentCooperation": "Hợp tác đại lý",
-    "complaints": "Khiếu nại & Đề xuất",
+    "complaints": "Khiếu nại và đề xuất",
     "telegram": "Telegram",
     "whatsapp": "WhatsApp",
-    "noServiceConfig": "Không có cấu hình dịch vụ",
+    "noServiceConfig": "Chưa có cấu hình dịch vụ",
     "linkNotConfigured": "Liên kết {{name}} chưa được cấu hình",
     "openLinkFailed": "Mở {{name}} thất bại",
     "configLoadFailed": "Tải cấu hình thất bại, vui lòng thử lại"
   },
   "selected": "Vui lòng chọn",
-  "game": {
-    "myCollection": "Bộ sưu tập của tôi"
-  },
   "login": {
-    "openFixed": "Bắt đầu trải nghiệm tuyệt vời",
+    "openFixed": "Mở trải nghiệm tuyệt vời",
     "inputAccount": "Vui lòng nhập tài khoản",
     "inputRight": "Vui lòng nhập nội dung chính xác",
     "inputPwd": "Vui lòng nhập mật khẩu",
@@ -173,14 +206,14 @@
     "resetpwdForCustomer": "Vui lòng liên hệ dịch vụ khách hàng để đặt lại mật khẩu",
     "loginSuccess": "Đăng nhập thành công"
   },
-  "rememberMe": "Nhớ mật khẩu",
-  "weiHuZhong": "Đang bảo trì nền tảng trò chơi...",
+  "rememberMe": "Ghi nhớ mật khẩu",
+  "weiHuZhong": "Nền tảng game đang bảo trì...",
   "pay_type": "Phương thức thanh toán",
   "online_pay": "Thanh toán trực tuyến",
-  "company_pay": "Nạp tiền công ty",
+  "company_pay": "Nạp qua công ty",
   "pay_channel": "Kênh thanh toán",
-  "recharge_qrcode": "Mã QR thanh toán",
-  "recharge_account": "Tài khoản thanh toán",
+  "recharge_qrcode": "Mã QR nhận tiền",
+  "recharge_account": "Tài khoản nhận tiền",
   "copy": "Sao chép",
   "recharge_username": "Tên người nhận tiền",
   "upload_cert": "Tải lên chứng từ chuyển khoản",
@@ -190,17 +223,17 @@
   "transfer_amount": "Số tiền nạp",
   "input_transfer_amount": "Vui lòng nhập số tiền nạp",
   "account": "Tài khoản",
-  "open_bank": "Ngân hàng mở tài khoản",
+  "open_bank": "Ngân hàng mở",
   "input_recharge_amount": "Vui lòng nhập tài khoản chuyển",
   "rechate_address": "Địa chỉ nạp tiền",
   "transfer_address": "Địa chỉ nạp tiền",
   "input_transfer_addr": "Vui lòng nhập địa chỉ nạp tiền",
-  "transfer_out_address": "Địa chỉ chuyển",
-  "input_transfer_out_addr": "Vui lòng nhập địa chỉ ví chuyển",
+  "transfer_out_address": "Địa chỉ chuyển ra",
+  "input_transfer_out_addr": "Vui lòng nhập địa chỉ ví chuyển ra",
   "game_log": {
     "not_cpmpelete": "Chưa thanh toán",
     "cancel": "Đã hủy",
-    "complete": "Hoàn thành"
+    "complete": "Đã hoàn thành"
   },
   "register": {
     "username": "Tên người dùng",
@@ -217,8 +250,8 @@
     "inputPhone": "Vui lòng nhập số điện thoại",
     "currency": "Loại tiền tệ",
     "inputCurrency": "Vui lòng chọn loại tiền tệ",
-    "captcha": "Mã xác minh",
-    "inputCaptcha": "Vui lòng nhập mã xác minh",
+    "captcha": "Mã xác nhận",
+    "inputCaptcha": "Vui lòng nhập mã xác nhận",
     "inviteCode": "Mã mời",
     "inputInviterCode": "Vui lòng nhập mã mời",
     "email": "Email"
@@ -228,24 +261,24 @@
     "dqBet": "Cược hiện tại",
     "amount": "Tiền thưởng thăng cấp",
     "zhuanXiang": "Độc quyền",
-    "dayLJ": "Quà tặng hàng ngày",
-    "weekLJ": "Quà tặng hàng tuần",
-    "monthLJ": "Quà tặng hàng tháng",
-    "brithdayLJ": "Quà tặng sinh nhật",
+    "dayLJ": "Tiền thưởng hàng ngày",
+    "weekLJ": "Tiền thưởng hàng tuần",
+    "monthLJ": "Tiền thưởng hàng tháng",
+    "brithdayLJ": "Tiền thưởng sinh nhật",
     "rightDetail": "Chi tiết đặc quyền VIP"
   },
-  "add": "Thêm mới",
-  "sweetWarning": "Lời khuyên",
+  "add": "Thêm",
+  "sweetWarning": "Nhắc nhở",
   "deposit": {
-    "detail1": "1. Các ngân hàng được liệt kê ở trên là ngân hàng được hỗ trợ bởi \"Thanh toán trực tuyến\". Chọn ngân hàng thanh toán của bạn.",
-    "detail2": "2. Điền số tiền bạn muốn thanh toán trong cột \"Số tiền gửi\" và nhấp vào nút \"Gửi\".",
-    "detail3": "3. Sau khi gửi tiền thành công, bạn phải đạt 1 lần số tiền cược hợp lệ mới có thể rút tiền (Chống rửa tiền)."
+    "detail1": "1. Các ngân hàng được liệt kê ở trên hỗ trợ 'Thanh toán trực tuyến', chọn ngân hàng thanh toán của bạn.",
+    "detail2": "2. Điền số tiền thanh toán vào mục 'Số tiền gửi' và nhấn nút 'Gửi'.",
+    "detail3": "3. Sau khi nạp tiền thành công, cần đạt doanh thu cược hiệu lực gấp 1 lần mới có thể rút tiền (chống rửa tiền)."
   },
   "youhuihuodong": "Hoạt động khuyến mãi",
   "systemAnnouncement": "Thông báo hệ thống",
-  "customerService": "Dịch vụ khách hàng",
+  "customerService": "Địa chỉ dịch vụ khách hàng",
   "financeAddress": "Địa chỉ tài chính",
-  "clickToOpen": "Nhấp để mở",
+  "clickToOpen": "Nhấn để mở",
   "hotline": "Đường dây nóng",
   "rechargeRecord": "Lịch sử nạp tiền",
   "rechargeAmount": "Số tiền nạp",
@@ -255,33 +288,33 @@
   "inputHuiwangAccount": "Vui lòng nhập tài khoản Huiwang",
   "inputUSDTAddress": "Vui lòng nhập địa chỉ ví USDT",
   "rechargeSubmitSuccess": "Gửi yêu cầu nạp tiền thành công",
-  "warmTips": "Lời khuyên",
+  "warmTips": "Lời nhắc",
   "rebateRecord": "Lịch sử hoàn tiền",
   "commissionRecord": "Lịch sử hoa hồng",
   "subordinateMembers": "Thành viên cấp dưới",
-  "teamInfo": "Thông tin nhóm",
-  "agentRecord": "Hồ sơ đại lý",
+  "teamInfo": "Thông tin đội",
+  "agentRecord": "Lịch sử đại lý",
   "adjustProportion": "Điều chỉnh tỷ lệ",
-  "addCredits": "Thêm tín dụng",
-  "memberAddCredits": "Thêm tín dụng thành viên",
+  "addCredits": "Thêm điểm",
+  "memberAddCredits": "Thêm điểm thành viên",
   "confirmTransfer": "Xác nhận chuyển khoản",
   "transferAmountTip1": "Số tiền chuyển sẽ được khấu trừ từ số dư của bạn",
-  "transferAmountTip2": "Chuyển khoản sẽ được ghi có ngay lập tức và không thể hoàn tác",
+  "transferAmountTip2": "Sau khi chuyển sẽ đến ngay lập tức, không thể thu hồi",
   "transferAmountTip3": "Vui lòng kiểm tra kỹ thông tin thành viên và số tiền",
-  "setAsDefault": "Đặt làm mặc định",
-  "confirmSetDefault": "Xác nhận đặt tài khoản này làm mặc định?",
-  "alreadyDefault": "Tài khoản này đã là mặc định",
+  "setAsDefault": "Đặt làm tài khoản mặc định",
+  "confirmSetDefault": "Bạn có muốn đặt tài khoản này làm mặc định không?",
+  "alreadyDefault": "Tài khoản này đã là tài khoản mặc định",
   "settingSuccess": "Cài đặt thành công",
   "settingFailed": "Cài đặt thất bại",
   "nickname": "Biệt danh",
   "inputNickname": "Vui lòng nhập biệt danh",
-  "hotGames": "Trò chơi hot",
-  "sportsEvents": "Sự kiện thể thao",
+  "hotGames": "Game hot",
+  "sportsEvents": "Thể thao",
   "liveCasino": "Casino trực tiếp",
-  "electronicGames": "Trò chơi điện tử",
-  "cardGames": "Trò chơi bài",
-  "fishingGames": "Trò chơi câu cá",
-  "lotteryGames": "Trò chơi xổ số",
+  "electronicGames": "Game điện tử",
+  "cardGames": "Game bài",
+  "fishingGames": "Game bắn cá",
+  "lotteryGames": "Game xổ số",
   "edit": "Chỉnh sửa",
   "delete": "Xóa",
   "save": "Lưu",
@@ -292,11 +325,11 @@
   "pleaseInput": "Vui lòng nhập",
   "pleaseSelect": "Vui lòng chọn",
   "inputPlaceholder": "Vui lòng nhập nội dung",
-  "pending": "Đang chờ",
-  "approved": "Đã duyệt",
+  "pending": "Chờ xét duyệt",
+  "approved": "Đã phê duyệt",
   "rejected": "Đã từ chối",
   "processing": "Đang xử lý",
-  "completed": "Hoàn thành",
+  "completed": "Đã hoàn thành",
   "networkError": "Yêu cầu mạng thất bại",
   "tryAgainLater": "Vui lòng thử lại sau",
   "dataLoadFailed": "Tải dữ liệu thất bại",
@@ -305,7 +338,7 @@
   "applyTime": "Thời gian đăng ký",
   "completeTime": "Thời gian hoàn thành",
   "rechargeDetail": "Chi tiết nạp tiền",
-  "orderNumber": "Mã đơn hàng",
+  "orderNumber": "Số đơn hàng",
   "bankAccountName": "Tên tài khoản ngân hàng",
   "bankCardNumber": "Số thẻ ngân hàng",
   "unknownStatus": "Trạng thái không xác định",
